# precipitation-io

./: .gitignore  Dockerfile  README.md  app.py  example-resevoir.config.json  example.config.json  pyproject.toml  requirements.txt
.github/workflows/: run-tests.yml
plugins/: ____lcd_display.py  ____sensor_data_collector.py  plugin.py  sensor_data_collector.py
plugins/button_toggle/: __init__.py  button_toggle.py
plugins/lcd_display/: __init__.py  lcd_display.py
plugins/plugin_example/: __init__.py  plugin_example.py
rain_barrels/: app.py  config.py
rain_barrels/controllers/: rain_barrels_controller.py
rain_barrels/drivers/: i2c_dev.py  led_test.py  switch_device.py  ultrasonic_sensor_dev.py
rain_barrels/dto/: distance_sensor.py  manifold.py  rain_barrel.py  reservoir.py
rain_barrels/models/: __init__.py  irrigation_system.py  lcd_display.py  pump.py  rain_barrel_manifold.py  rain_barrel_reservoir.py  resevoir.py  sensor_data_collector.py  tank.py  volume_sensor.py
rain_barrels/plugins/: plugin.py
rain_barrels/plugins/button_toggle/: button_toggle.py
rain_barrels/util/: is_raspberry_pi_env.py  load_irrigation_config.py  load_plugins.py  load_resevoir_config.py  logger.py  mock_hardware_env.py  mock_hardware_modules.py  use_hardware.py
test/controllers/: test_rain_barrel_controller.py
test/dto/: test_manifold.py  test_rain_barrel.py
test/models/: test_irrigation_system.py  test_pump.py  test_resevoir.py  test_tank.py  test_volume_sensor.py
test/util/: hardware_mock.py
thunder-tests/: thunderActivity.json
(+6 files in other folders)
