[tool.poetry]
name = "rain_barrels"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "rain_barrels"}]

[tool.poetry.dependencies]
python = "^3.9"
quart = "^0.18.4"
schedule = "^1.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
