[tool.poetry]
name = "rain_barrels"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "rain_barrels"}]

[tool.poetry.dependencies]
python = "^3.9"
schedule = "^1.2.1"
flask = "^3.0.2"
flask-cors = "^4.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.3.0"
parameterized = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
